--- a/AVCMobile/package.json
+++ b/AVCMobile/package.json
@@ -17,9 +17,11 @@
     "react-icons": "^4.10.1",
     "react-native": "^0.72.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0"
+    "react-native-screens": "^3.24.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +31,7 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
