--- a/AVCMobile/package.json
+++ b/AVCMobile/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.2.0",
     "react-icons": "^4.10.1",
     "react-native": "^0.72.3",
