--- a/AVCMobile/package.json
+++ b/AVCMobile/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.5.0",
     "react": "18.2.0",
     "react-icons": "^4.10.1",
     "react-native": "^0.72.3",
