--- a/AVCMobile/package.json
+++ b/AVCMobile/package.json
@@ -21,6 +21,8 @@
     "react": "18.2.0",
     "react-icons": "^4.10.1",
     "react-native": "^0.72.3",
+    "react-native-animatable": "^1.3.3",
+    "react-native-animated-ellipsis": "^2.0.0",
     "react-native-date-picker": "^4.2.14",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
